[package]
name = "whono"
version = "0.1.0"
authors = ["SarahGreyWolf <m.sarahgreywolf@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]


[[bin]]
name="whono_server"
path="src/main.rs"

[dependencies]
cfg-if = "1.0.0"
serde = {version= "1.0.123", features=["derive"]}
byteorder = "1.3.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.22"
console_error_panic_hook = { version = "0.1.6"}
wee_alloc = { version = "0.4.5"}
js-sys = "0.3.47"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.47"
features = [
    "Window",
    "MessageEvent",
    "WebSocket",
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "ProgressEvent",
    "RtcPeerConnection",
    "RtcSignalingState",
    "RtcSdpType",
    "RtcSessionDescriptionInit",
    "RtcPeerConnectionIceEvent",
    "RtcIceCandidate",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "Worker"
]


[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
